2011-08-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.91 released.

        * Added code to complement FullAuto.


2011-08-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.90 released.

        * Added code to complement FullAuto.


2011-08-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.89 released.

        * Added code to complement FullAuto.


2011-07-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.88 released.

        * Better handling of top script indicated menu_config.


2011-07-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.87 released.

        * Bug fix to new code from 07-05


2011-07-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.86 released.

        * Added code to complement FullAuto. New code works
          with FullAuto to enable user to select and save
          a default startup menu file.


2011-07-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.85 released.

        * Removed some overlooked error-checking code.


2011-07-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.84 released.

        * Added ability to revise banner with anonymous subs.


2011-06-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.83 released.

        * Fixes to navigation with recursive menus.


2011-06-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.82 released.

        * Fixed bug when using with FullAuto introduced with
          recent changes.


2011-06-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.81 released.

        * New ITEM LEVEL Select element. See POD documentation
          for details.

        * New Mark element. See POD documentation
          for details.


2011-05-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
