@@ -1,3 +1,11 @@
+2011-08-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.92 released.
+
+        * Added code to complement FullAuto - fixed error
+          reporting.
+
+
 2011-08-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.91 released.
